--- a/scss/Base/_reset.scss
+++ b/scss/Base/_reset.scss
@@ -12,11 +12,9 @@ body {
     line-height: unset;
     font-weight: $fw-400;
     &.noscroll{
-        overflow-y: hidden;
+        overflow: hidden;
     }
-}
-#myBody{
-    overflow-x: hidden;
+    overflow-x: hidden !important;
 }
 a {
     text-decoration: none !important;
